Bug 458822 - Crash when using Konsole
Summary: Crash when using Konsole
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 460235 460351 460489 460776 461354 462147 462386 462430 468316 468603 475073 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-09-06 22:20 UTC by Aleix Pol
Modified: 2023-10-01 11:46 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: v22.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2022-09-06 22:20:57 UTC
I  am unable to reproduce but I figured it could be useful nevertheless.

This is with fresh master.

[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/home/apol/devel/kde5/bin/konsole'.
Program terminated with signal SIGABRT, Aborted.
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
44            return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0;
[Current thread is 1 (Thread 0x7ffb82199a80 (LWP 147047))]
(gdb) where
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007ffb862a1543 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2  0x00007ffb86251998 in __GI_raise (sig=6) at ../sysdeps/posix/raise.c:26
#3  0x00007ffb88a905a9 in KCrash::defaultCrashHandler (sig=6) at /home/apol/devel/frameworks/kcrash/src/kcrash.cpp:618
#4  <signal handler called>
#5  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#6  0x00007ffb862a1543 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#7  0x00007ffb86251998 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#8  0x00007ffb8623b53d in __GI_abort () at abort.c:79
#9  0x00007ffb86499833 in __gnu_cxx::__verbose_terminate_handler () at /usr/src/debug/gcc/libstdc++-v3/libsupc++/vterminate.cc:95
#10 0x00007ffb864a5cfc in __cxxabiv1::__terminate (handler=<optimized out>) at /usr/src/debug/gcc/libstdc++-v3/libsupc++/eh_terminate.cc:48
#11 0x00007ffb864a5d69 in std::terminate () at /usr/src/debug/gcc/libstdc++-v3/libsupc++/eh_terminate.cc:58
#12 0x00007ffb864a5fcd in __cxxabiv1::__cxa_throw (obj=<optimized out>, tinfo=0x7ffb866291c8 <typeinfo for std::out_of_range>, dest=0x7ffb864bd710 <std::out_of_range::~out_of_range()>) at /usr/src/debug/gcc/libstdc++-v3/libsupc++/eh_throw.cc:98
#13 0x00007ffb8649c55b in std::__throw_out_of_range_fmt (__fmt=<optimized out>) at /usr/src/debug/gcc/libstdc++-v3/src/c++11/functexcept.cc:101
#14 0x00007ffb89d3bd6b in std::vector<QVector<Konsole::Character>, std::allocator<QVector<Konsole::Character> > >::_M_range_check (this=0x565210de65c0, __n=21) at /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.0/../../../../include/c++/12.2.0/bits/stl_vector.h:1153
#15 0x00007ffb89d34e71 in std::vector<QVector<Konsole::Character>, std::allocator<QVector<Konsole::Character> > >::at (this=0x565210de65c0, __n=21) at /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.0/../../../../include/c++/12.2.0/bits/stl_vector.h:1175
#16 0x00007ffb89d30eae in Konsole::Screen::setSelectionEnd (this=0x565210de65b0, x=74, y=16, trimTrailingWhitespace=false) at /home/apol/devel/frameworks/konsole/src/Screen.cpp:1662
#17 0x00007ffb89d44843 in Konsole::ScreenWindow::setSelectionEnd (this=0x565211078670, column=74, line=16, trimTrailingWhitespace=false) at /home/apol/devel/frameworks/konsole/src/ScreenWindow.cpp:145
#18 0x00007ffb89ddbdcd in Konsole::TerminalDisplay::extendSelection (this=0x56521101c060, position=...) at /home/apol/devel/frameworks/konsole/src/terminalDisplay/TerminalDisplay.cpp:1446
#19 0x00007ffb89ddc4eb in Konsole::TerminalDisplay::mouseMoveEvent (this=0x56521101c060, ev=0x7ffdf6b7db80) at /home/apol/devel/frameworks/konsole/src/terminalDisplay/TerminalDisplay.cpp:1284
#20 0x00007ffb879a9d28 in QWidget::event (this=0x56521101c060, event=0x7ffdf6b7db80) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidget.cpp:9033
#21 0x00007ffb89de27fa in Konsole::TerminalDisplay::event (this=0x56521101c060, event=0x7ffdf6b7db80) at /home/apol/devel/frameworks/konsole/src/terminalDisplay/TerminalDisplay.cpp:2665
#22 0x00007ffb87967ffe in QApplicationPrivate::notify_helper (this=this@entry=0x565210a56e60, receiver=receiver@entry=0x56521101c060, e=e@entry=0x7ffdf6b7db80) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3637
#23 0x00007ffb87970592 in QApplication::notify (this=<optimized out>, receiver=0x56521101c060, e=<optimized out>) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3081
#24 0x00007ffb86ab5988 in QCoreApplication::notifyInternal2 (receiver=0x56521101c060, event=0x7ffdf6b7db80) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064
#25 0x00007ffb8796e69e in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x56521101c060, event=event@entry=0x7ffdf6b7db80, alienWidget=<optimized out>, nativeWidget=0x565210b107a0, buttonDown=buttonDown@entry=0x7ffb87eac9f0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false)
    at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:2619
#26 0x00007ffb879c2b58 in QWidgetWindow::handleMouseEvent (this=0x565210b40220, event=0x7ffdf6b7de30) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidgetwindow.cpp:683
#27 0x00007ffb879c5ee0 in QWidgetWindow::event (this=0x565210b40220, event=0x7ffdf6b7de30) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidgetwindow.cpp:300
#28 0x00007ffb87967ffe in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x565210b40220, e=0x7ffdf6b7de30) at /home/apol/devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3637
#29 0x00007ffb86ab5988 in QCoreApplication::notifyInternal2 (receiver=0x565210b40220, event=0x7ffdf6b7de30) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064
#30 0x00007ffb87143bb5 in QGuiApplicationPrivate::processMouseEvent (e=0x7ffb7c0062c0) at /home/apol/devel/frameworks/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:2282
#31 0x00007ffb87116e7c in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /home/apol/devel/frameworks/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:1169
#32 0x00007ffb83763a20 in userEventSourceDispatch (source=<optimized out>) at /home/apol/devel/frameworks/qt5/qtbase/src/platformsupport/eventdispatchers/qeventdispatcher_glib.cpp:74
#33 0x00007ffb82fdfb2b in g_main_dispatch (context=0x565210a77ac0) at ../glib/glib/gmain.c:3417
#34 g_main_context_dispatch (context=0x565210a77ac0) at ../glib/glib/gmain.c:4135
#35 0x00007ffb83035e79 in g_main_context_iterate.constprop.0 (context=context@entry=0x565210a77ac0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4211
#36 0x00007ffb82fdd252 in g_main_context_iteration (context=0x565210a77ac0, may_block=1) at ../glib/glib/gmain.c:4276
#37 0x00007ffb86b0d766 in QEventDispatcherGlib::processEvents (this=0x565210a246b0, flags=...) at /home/apol/devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423
#38 0x00007ffb86ab43fb in QEventLoop::exec (this=this@entry=0x7ffdf6b7e1d0, flags=..., flags@entry=...) at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/global/qflags.h:69
#39 0x00007ffb86abc566 in QCoreApplication::exec () at ../../include/QtCore/../../../../../devel/frameworks/qt5/qtbase/src/corelib/global/qflags.h:121
#40 0x000056520ebb2264 in main (argc=1, argv=0x7ffdf6b7e708) at /home/apol/devel/frameworks/konsole/src/main.cpp:252
Comment 1 Bug Janitor Service 2022-10-08 20:08:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/754
Comment 2 Kurt Hindenburg 2022-10-19 02:07:01 UTC
https://invent.kde.org/utilities/konsole/-/merge_requests/754 - this didn't close when the MR commit
Comment 3 ninjalj 2022-11-03 11:25:54 UTC
*** Bug 460776 has been marked as a duplicate of this bug. ***
Comment 4 ninjalj 2022-11-03 11:26:17 UTC
*** Bug 460489 has been marked as a duplicate of this bug. ***
Comment 5 ninjalj 2022-11-03 11:30:19 UTC
*** Bug 460351 has been marked as a duplicate of this bug. ***
Comment 6 ninjalj 2022-11-03 11:30:46 UTC
*** Bug 460235 has been marked as a duplicate of this bug. ***
Comment 7 ninjalj 2022-11-03 22:34:14 UTC
*** Bug 461354 has been marked as a duplicate of this bug. ***
Comment 8 ninjalj 2022-11-23 23:08:34 UTC
*** Bug 462147 has been marked as a duplicate of this bug. ***
Comment 9 ninjalj 2022-11-30 21:02:02 UTC
*** Bug 462386 has been marked as a duplicate of this bug. ***
Comment 10 ninjalj 2022-11-30 21:02:16 UTC
*** Bug 462430 has been marked as a duplicate of this bug. ***
Comment 11 Oded Arbel 2023-01-10 17:53:50 UTC
I just got this crash with Konsole 22.08.2 (from neon unstable) which I understand this issue should already be fixed there.

Here's the drkonqi report (originally submitted in bug #462386):

-- Backtrace (Reduced):
#6  0x00007f267a53f4af in Konsole::Screen::setSelectionEnd(int, int, bool) () from /lib/x86_64-linux-gnu/libkonsoleprivate.so.1
#7  0x00007f267a59e411 in Konsole::TerminalDisplay::extendSelection(QPoint const&) () from /lib/x86_64-linux-gnu/libkonsoleprivate.so.1
#8  0x00007f267a59e992 in Konsole::TerminalDisplay::mouseMoveEvent(QMouseEvent*) () from /lib/x86_64-linux-gnu/libkonsoleprivate.so.1
#9  0x00007f2679daf87e in QWidget::event (this=0x5616d3e15410, event=0x7fff871ae700) at kernel/qwidget.cpp:9043
#10 0x00007f2679d6c763 in QApplicationPrivate::notify_helper (this=this@entry=0x5616d3cd9fb0, receiver=receiver@entry=0x5616d3e15410, e=e@entry=0x7fff871ae700) at kernel/qapplication.cpp:3637

And here's the (non-demangled) back trace output from the core dump:


                #0  0x00007f267869226b __pthread_kill_implementation (libc.so.6 + 0x9226b)
                #1  0x00007f267863bc46 __GI_raise (libc.so.6 + 0x3bc46)
                #2  0x00007f267a30a0a5 _ZN6KCrash19defaultCrashHandlerEi (libKF5Crash.so.5 + 0x80a5)
                #3  0x00007f267863bcf0 __restore_rt (libc.so.6 + 0x3bcf0)
                #4  0x00007f267a53f4af _ZN7Konsole6Screen15setSelectionEndEiib (libkonsoleprivate.so.1 + 0x824af)
                #5  0x00007f267a59e411 _ZN7Konsole15TerminalDisplay15extendSelectionERK6QPoint (libkonsoleprivate.so.1 + 0xe1411)
                #6  0x00007f267a59e992 _ZN7Konsole15TerminalDisplay14mouseMoveEventEP11QMouseEvent (libkonsoleprivate.so.1 + 0xe1992)
                #7  0x00007f2679daf87e _ZN7QWidget5eventEP6QEvent (libQt5Widgets.so.5 + 0x1af87e)
                #8  0x00007f2679d6c763 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x16c763)
                #9  0x00007f2679d743a4 _ZN12QApplication6notifyEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x1743a4)
                #10 0x00007f26790bc09a _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x2bc09a)
                #11 0x00007f2679d72e87 _ZN19QApplicationPrivate14sendMouseEventEP7QWidgetP11QMouseEventS1_S1_PS1_R8QPointerIS0_Ebb (libQt5Widgets.so.5 + 0x172e87)
                #12 0x00007f2679dc9110 n/a (libQt5Widgets.so.5 + 0x1c9110)
                #13 0x00007f2679dcc3a5 n/a (libQt5Widgets.so.5 + 0x1cc3a5)
                #14 0x00007f2679d6c763 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt5Widgets.so.5 + 0x16c763)
                #15 0x00007f26790bc09a _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt5Core.so.5 + 0x2bc09a)
                #16 0x00007f2679542a87 _ZN22QGuiApplicationPrivate17processMouseEventEPN29QWindowSystemInterfacePrivate10MouseEventE (libQt5Gui.so.5 + 0x142a87)
                #17 0x00007f2679516a6c _ZN22QWindowSystemInterface22sendWindowSystemEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Gui.so.5 + 0x116a6c)
                #18 0x00007f2676fbc594 n/a (libQt5WaylandClient.so.5 + 0xb7594)
                #19 0x00007f26772734f9 g_main_context_dispatch (libglib-2.0.so.0 + 0x564f9)
                #20 0x00007f26772c8228 g_main_context_iterate.constprop.0 (libglib-2.0.so.0 + 0xab228)
                #21 0x00007f2677270cb0 g_main_context_iteration (libglib-2.0.so.0 + 0x53cb0)
                #22 0x00007f2679115af8 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt5Core.so.5 + 0x315af8)
                #23 0x00007f26790ba9bb _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt5Core.so.5 + 0x2ba9bb)
                #24 0x00007f26790c2f54 _ZN16QCoreApplication4execEv (libQt5Core.so.5 + 0x2c2f54)
                #25 0x00005616d2fa17c1 n/a (konsole + 0x67c1)
                #26 0x00007f2678623510 __libc_start_call_main (libc.so.6 + 0x23510)
                #27 0x00007f26786235c9 __libc_start_main_impl (libc.so.6 + 0x235c9)
                #28 0x00005616d2fa2055 n/a (konsole + 0x7055)
Comment 12 Oded Arbel 2023-01-10 17:55:29 UTC
*** Bug 462430 has been marked as a duplicate of this bug. ***
Comment 13 Aleix Pol 2023-01-11 00:25:20 UTC
If you look at the fields on top, you'll see that it's fixed on v22.08.3.
Comment 14 ninjalj 2023-04-28 22:34:31 UTC
*** Bug 468603 has been marked as a duplicate of this bug. ***
Comment 15 ninjalj 2023-04-28 22:35:55 UTC
*** Bug 468316 has been marked as a duplicate of this bug. ***
Comment 16 ninjalj 2023-10-01 11:46:13 UTC
*** Bug 475073 has been marked as a duplicate of this bug. ***